Fix page stretching?

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -303,6 +303,8 @@ body {
   min-width: 100%;
   min-height: 100%;
   z-index: -1;
+  object-fit: cover;
+  object-position: left;
 }
 
 ::selection {
